tomcatpod.yml
apiVersion: v1
kind: Pod

metadata:
  name: tomcat-pod
  namespace: monitoring
  labels:
    env: dev

spec:  
  containers:
  - name: tomcatapp
    image: tomcat   
    ports:
    - containerPort: 8080
