tomcatservice.yml
kind: Service
apiVersion: v1
metadata:
  name: tomcat-pod
  namespace: monitoring
spec:
  selector:
    app: tomcat
  ports:
  - protocol: TCP
    port: 9870
    targetPort: 8080
